Mixed Test Suite and E2E IT Tests Separation